<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_text">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="privacy_policy">Пользовательское соглашение</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer</string>
    <string name="privacy_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="theme_text">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="body_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_email">ruslanfazl@ya.ru</string>
    <string name="choose_the_app">Choose the app</string>
    <string name="refresh">Обновить</string>
    <string name="something_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="empty_list">Ничего не нашлось</string>
    <string name="you_found">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration_title">Длительность</string>
    <string name="album_title">Альбом</string>
    <string name="year_title">Год</string>
    <string name="genre_title">Жанр</string>
    <string name="country_title">Страна</string>
    <string name="audio_error">Аудио недоступно для этого трека</string>
    <string name="track_not_found">Трек не найден</string>
    <string name="empty_favorite_text">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="new_playlist_title">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_negative_button">Отмена</string>
    <string name="dialog_positive_button">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="already_added_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="adding_to_playlist_error">Ошибка добавления, попробуйте еще раз</string>
    <string name="no_tracks_in_playlist">Вы не добавили ни одного трека</string>
    <string name="confirm_delete_track">Хотите удалить трек</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="sharing_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="confirm_delete_playlist">Хотите удалить плейлист"</string>
    <string name="playlist_deleted">Плейлист удален</string>
    <string name="deleting_error">Ошибка удаления</string>
    <string name="no_tracks">Треков нет, делиться нечем</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="save_playlist">Сохранить</string>
    <plurals name="playlist_tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="playlist_duration">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>
