<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:padding="@dimen/_16dp"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/settings_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back_button_settings_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="center"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/TitleText"
            android:layout_marginStart="12dp"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        style="@style/SettingsScreenLinearLayout"
        android:layout_marginTop="@dimen/_24dp">

        <TextView
            style="@style/SettingsScreenText"
            android:text="@string/dark_theme" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:thumbTint="@color/switch_thumb_color"
            android:trackTint="@color/switch_track_color"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_app"
        style="@style/SettingsScreenLinearLayout"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            style="@style/SettingsScreenText"
            android:text="@string/share_text" />

        <ImageView
            style="@style/SettingsScreenImage"
            android:src="@drawable/ic_share" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/support"
        style="@style/SettingsScreenLinearLayout"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            style="@style/SettingsScreenText"
            android:text="@string/write_to_support" />

        <ImageView
            style="@style/SettingsScreenImage"
            android:src="@drawable/ic_support" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/privacy_policy"
        style="@style/SettingsScreenLinearLayout"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            style="@style/SettingsScreenText"
            android:text="@string/privacy_policy" />

        <ImageView
            style="@style/SettingsScreenImage"
            android:src="@drawable/ic_chevron" />

    </LinearLayout>

</LinearLayout>
