<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".player.ui.PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/_28dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_middle_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageButton
            android:id="@+id/back_button_player_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20dp"
            android:background="@null"
            android:scaleType="center"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/player_image_placeholder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="82dp"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@id/barrier_under_track_image"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_under_track_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="player_image_placeholder" />

        <TextView
            android:id="@+id/player_track_title"
            style="@style/TrackAndArtistTitle"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:textColor="?attr/textColor"
            android:textSize="@dimen/_22sp"
            app:layout_constraintBottom_toTopOf="@id/player_artist_title"
            app:layout_constraintTop_toBottomOf="@id/barrier_under_track_image"
            tools:text="Тестовый текст названия песни" />

        <TextView
            android:id="@+id/player_artist_title"
            style="@style/TrackAndArtistTitle"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:textSize="@dimen/_14sp"
            app:layout_constraintTop_toBottomOf="@id/player_track_title"
            tools:text="Тестовый текст исполнителя" />

        <ImageButton
            android:id="@+id/player_add_track_button"
            style="@style/PlayerButton"
            android:src="@drawable/ic_add_track"
            app:layout_constraintBottom_toBottomOf="@id/player_play_button"
            app:layout_constraintEnd_toStartOf="@id/player_play_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/player_play_button" />

        <ImageButton
            android:id="@+id/player_play_button"
            style="@style/PlayerButton"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_play"
            app:layout_constraintEnd_toStartOf="@id/player_like_button"
            app:layout_constraintStart_toEndOf="@id/player_add_track_button"
            app:layout_constraintTop_toBottomOf="@id/player_artist_title" />

        <ImageButton
            android:id="@+id/player_like_button"
            style="@style/PlayerButton"
            android:background="@drawable/ic_player_circle_bg"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toBottomOf="@id/player_play_button"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/player_play_button"
            app:layout_constraintTop_toTopOf="@id/player_play_button"
            />

        <TextView
            android:id="@+id/player_track_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/textColor"
            android:textFontWeight="500"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/player_play_button"
            tools:text="5:30" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="player_track_duration" />

        <TextView
            android:id="@+id/player_duration_title"
            style="@style/TrackInfoTitleText"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/duration_title"
            app:layout_constraintBottom_toTopOf="@id/player_album_title"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/player_album_title"
            style="@style/TrackInfoTitleText"
            android:text="@string/album_title"
            app:layout_constraintBottom_toTopOf="@id/player_year_title"
            app:layout_constraintTop_toBottomOf="@id/player_duration_title" />

        <TextView
            android:id="@+id/player_year_title"
            style="@style/TrackInfoTitleText"
            android:text="@string/year_title"
            app:layout_constraintBottom_toTopOf="@id/player_genre_title"
            app:layout_constraintTop_toBottomOf="@id/player_album_title" />

        <TextView
            android:id="@+id/player_genre_title"
            style="@style/TrackInfoTitleText"
            android:text="@string/genre_title"
            app:layout_constraintBottom_toTopOf="@id/player_country_title"
            app:layout_constraintTop_toBottomOf="@id/player_year_title" />

        <TextView
            android:id="@+id/player_country_title"
            style="@style/TrackInfoTitleText"
            android:text="@string/country_title"
            app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
            app:layout_constraintTop_toBottomOf="@id/player_genre_title" />

        <TextView
            android:id="@+id/player_duration_value"
            style="@style/TrackInfoText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/player_duration_title"
            tools:text="5:30" />

        <TextView
            android:id="@+id/player_album_value"
            style="@style/TrackInfoText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/player_album_title"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/player_year_value"
            style="@style/TrackInfoText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/player_year_title"
            tools:text="2025" />

        <TextView
            android:id="@+id/player_genre_value"
            style="@style/TrackInfoText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/player_genre_title"
            tools:text="Rock" />

        <TextView
            android:id="@+id/player_country_value"
            style="@style/TrackInfoText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/player_country_title"
            tools:text="USA" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/player_album_info_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="player_album_title, player_album_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
